image placement fixed
I need to fix other element positions

--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" text="text/css" href="stylesheet.css">
-  
-  <title>Frontend Mentor | Stats preview card component</title>
-</head>
-<body class="container">
-  <div class="card">
-  <img class="image" src="./images/image-header-desktop.jpg">
-  <div>
-  Get insights that help your business grow.
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" text="text/css" href="stylesheet.css" />
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-  </div>
-  <div>
-  10k+ companiesa
-  314 templates
-  12m+ queries
- </div>
-</div>
-
-</body>
+    <title>Frontend Mentor | Stats preview card component</title>
+  </head>
+  <body class="container">
+    <div class="card">
+      <img class="image" src="./images/image-header-desktop.jpg" />
+      <div>
+        Get insights that help your business grow. Discover the benefits of data
+        analytics and make better decisions regarding revenue, customer
+        experience, and overall efficiency.
+      </div>
+      <div>10k+ companiesa</div>
+      <div>314 templates</div>
+      <div>12m+ queries</div>
+    </div>
+  </body>
 </html>
