--- a/index.html
+++ b/index.html
@@ -17,14 +17,25 @@
   <body class="container">
     <div class="card">
       <img class="image" src="./images/image-header-desktop.jpg" />
-      <div>
-        Get insights that help your business grow. Discover the benefits of data
-        analytics and make better decisions regarding revenue, customer
-        experience, and overall efficiency.
+      <div class="text-box">
+        <div>
+          <h1>Get <span style="color:hsl(277, 64%, 61%);">insights</span> that help your business grow.</h1>
+          <p>Discover the benefits of
+          data analytics and make better decisions regarding revenue, customer
+          experience, and overall efficiency.</p>
+        </div>
+        <div class="stats">
+          <div class="pad-right">
+           <h2>10k+ </h2> <p>companiesa</p>
+          </div>
+          <div class="pad-right">
+            <h2>314</h2> <p>templates</p>
+          </div>
+          <div>
+            <h2>12m+</h2> <p>queries</p>
+          </div>
+        </div>
       </div>
-      <div>10k+ companiesa</div>
-      <div>314 templates</div>
-      <div>12m+ queries</div>
     </div>
   </body>
 </html>
