need to recolor image and do mobile version
everything is complete except those 2 things

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body class="container">
     <div class="card">
-      <img class="image" src="./images/image-header-desktop.jpg" />
+      <img src="./images/image-header-desktop.jpg" />
       <div class="text-box">
         <div>
           <h1>Get <span style="color:hsl(277, 64%, 61%);">insights</span> that help your business grow.</h1>
