--- a/index.html
+++ b/index.html
@@ -15,24 +15,31 @@
     <title>Frontend Mentor | Stats preview card component</title>
   </head>
   <body class="container">
-    <div class="card">
-      <img src="./images/image-header-desktop.jpg" />
+    <div class="card">   
+       <img id="color" src="./images/image-header-desktop.jpg" />
       <div class="text-box">
         <div>
-          <h1>Get <span style="color:hsl(277, 64%, 61%);">insights</span> that help your business grow.</h1>
-          <p>Discover the benefits of
-          data analytics and make better decisions regarding revenue, customer
-          experience, and overall efficiency.</p>
+          <h1>
+            Get <span style="color: hsl(277, 64%, 61%)">insights</span> that
+            help your business grow.
+          </h1>
+          <p>
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </p>
         </div>
         <div class="stats">
           <div class="pad-right">
-           <h2>10k+ </h2> <p>companiesa</p>
+            <h2>10k+</h2>
+            <p>companiesa</p>
           </div>
           <div class="pad-right">
-            <h2>314</h2> <p>templates</p>
+            <h2>314</h2>
+            <p>templates</p>
           </div>
           <div>
-            <h2>12m+</h2> <p>queries</p>
+            <h2>12m+</h2>
+            <p>queries</p>
           </div>
         </div>
       </div>
