--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <title>Frontend Mentor | Stats preview card component</title>
   </head>
   <body class="container">
-    <div class="card">   
-       <img id="color" src="./images/image-header-desktop.jpg" />
+    <div id="card"> 
+      <div id="color">
+       <img  src="./images/image-header-desktop.jpg" />
+      </div>  
       <div class="text-box">
         <div>
           <h1>
@@ -31,7 +33,7 @@
         <div class="stats">
           <div class="pad-right">
             <h2>10k+</h2>
-            <p>companiesa</p>
+            <p>companies</p>
           </div>
           <div class="pad-right">
             <h2>314</h2>
